Bug fixes
Before, when displaying posts in views/posts/index.html.erb and explore.html.erb, @posts would contain all the posts, and then using if statements in the html.erb files, certain posts were displayed. This resulted in the will_paginate gem sometimes displaying blank pages. Now, I use an array (created in posts_controller.rb) that is used to display posts in the views. Additionally, the will_paginate gem acts on the array, so it works properly.

In addition, I fixed the bug where the will_paginate gem would become too large for its div, resulting in it spliting the "next -->" button in half.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -186,9 +186,10 @@ img.avatar_image_large{
 }
 
 //used to style will_paginate links. It is a modified version of the Digg-style pagination
-#pagination{
-  max-width: 500px;
+div.pagination{
+  max-width: 550px;
   max-height: 50px;
+  width: 100%;
 }
 
 .pagination {
